# CHRONO

./: AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Documento.md  HISTORIAL_COMPLETE.md  HISTORIAL_SUGGESTIONS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LICENSE  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_SUMMARY.md  README.md  RESUMEN_EJECUTIVO.md  SUGGESTIONS_GUIDE.md  config.example.toml  demo_historial.sh  demo_smart_rendering.sh  demo_suggestions.py  test_context.sh  test_suggestions.sh
.github/workflows/: ci.yml
benches/: rendering.rs
crates/ansi/: Cargo.toml
crates/ansi/src/: handler.rs  lib.rs  tests.rs
crates/app/: Cargo.toml
crates/app/src/: config.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: attributes.rs  cell.rs  context.rs  cursor.rs  detector.rs  history.rs  lib.rs  screen.rs  tests.rs
crates/pty/: Cargo.toml
crates/pty/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: cpu.rs  lib.rs  theme.rs
docs/: SMART_RENDERING.md  SUGGESTIONS.md
examples/: colored.rs  simple.rs
